--- a/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
@@ -11,7 +11,7 @@
         <p>@MyFilters.IconActionLink("/user_management/usersPermisions/Index", "fas fa-users-cog", "User grants", "administrator page that show all site permissions")</p>
         <p>
             @MyFilters.IconActionLink("/user_management/users/ListSessions", "fas fa-th-list", "Sessions", "List active session tokens")
-            <span class="badge badge-info">Active sessions: @ViewBag.ActiveSessions</span>
+            <span class="badge badge-warning">Active sessions: @ViewBag.ActiveSessions</span>
         </p>
     </div>
 </div>
