update grid fault handlers

--- a/EqUiWebUi/Areas/Alert/Views/L_controlLimits/_List.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/L_controlLimits/_List.cshtml
@@ -31,7 +31,8 @@
             //
             },
             reloadFailed: function (result) {
-                $('#l_controlLimitsGrid').html("Error while loading!!!");
+                console.log(result);
+                $('#l_controlLimitsGrid').html($("#Error", result.responseText).html());
             }
             });
     </script>
