--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -5,7 +5,6 @@
     <h1>WELCOME IN @ViewBag.Title</h1>
 </div>
 
-
 <div class="card d-none">
     <div class="card-header ani_PulseRed">
         <h5 class="card-title text-dark">
@@ -14,8 +13,8 @@
         </h5>
     </div>
     <div class="card-body ani_PulseBlueOnce">
-        <h1>Tableau data is down.</h1>
-        Tableau data refresh unavailable. Waiting for support from Sweden.
+        <h1>Title.</h1>
+        Message
     </div>
 </div>
 
@@ -93,11 +92,10 @@
 <p></p>
 }
 
-@*This card is default collapsed see fa-rotate-180 and display:none*@
 <div class="card">
     <div class="card-header bg-danger">
         <h5 class="card-title text-white">
-            Beta
+            Beta area (tools  in development)
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
         </h5>
     </div>
