--- a/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
@@ -97,14 +97,14 @@
                             },
                             reloadFailed: function (result) {
                                 console.log(result);
-                                $('[data-name="SupervisieGrid"]').html("<div class='alert alert-danger'>Error while loading!! </div>");
+                                $('[data-name="SupervisieGrid"]').html($("#Error", result.responseText).html());
                             }
                         });
                 }
             },
             reloadFailed: function (result) {
                 console.log(result);
-                $('[data-name="PloegRapportGrid"]').html("<div class='alert alert-danger'>Error while loading!! </div>");
+                $('[data-name="PloegRapportGrid"]').html($("#Error", result.responseText).html());
             }
         });
 
