--- a/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
@@ -38,7 +38,7 @@
         },
         reloadFailed: function (result) {
             console.log(result);
-            $('[data-name="SupervisieGrid"]').html("<div class='alert alert-danger'>Error while loading!! </div>");
+            $('[data-name="SupervisieGrid"]').html($("#Error", result.responseText).html());
         }
     });
 
