--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
@@ -120,7 +120,7 @@
                 sourceUrl: '@Html.Raw(@Url.Action("_List","c_variable", new {enable_mask = Model.cVariableMask, controller_id = ViewBag.controller_id }))',
       requestType: 'get', // Ajax grid request type
       reloadFailed: function (result) {
-         $("#c_variableGrid").html("Error while loading!!!");
+          $("#c_variableGrid").html($("#Error", result.responseText).html());
                 }
             });
 
@@ -128,7 +128,7 @@
                 sourceUrl: '@Html.Raw(@Url.Action("_List", "c_variable_search", new {enable_mask = Model.cVariableSearchMask, controller_id = ViewBag.controller_id }))',
       requestType: 'get', // Ajax grid request type
       reloadFailed: function (result) {
-          $("#c_variable_searchGrid").html("Error while loading!!!");
+          $("#c_variable_searchGrid").html($("#Error", result.responseText).html());
                 }
     });
 
@@ -136,7 +136,7 @@
                 sourceUrl: '@Html.Raw(@Url.Action("_List", "c_error", new {enable_mask = Model.cErrorMask, controller_id = ViewBag.controller_id }))',
       requestType: 'get', // Ajax grid request type
       reloadFailed: function (result) {
-          $("#c_errorGrid").html("Error while loading!!!");
+          $("#c_errorGrid").html($("#Error", result.responseText).html());
                 }
             });
 
@@ -144,7 +144,7 @@
                 sourceUrl: '@Html.Raw(@Url.Action("_List", "c_csv_log", new {enable_mask = Model.cCSVLogMask, controller_id = ViewBag.controller_id }))',
         requestType: 'get', // Ajax grid request type
         reloadFailed: function (result) {
-            $("#c_csv_logGrid").html("Error while loading!!!");
+            $("#c_csv_logGrid").html($("#Error", result.responseText).html());
                 }
             });
 
@@ -152,7 +152,7 @@
                 sourceUrl: '@Html.Raw(@Url.Action("_List", "c_device_info", new {enable_mask = Model.cDeviceInfoMask, controller_id = ViewBag.controller_id }))',
         requestType: 'get', // Ajax grid request type
         reloadFailed: function (result) {
-            $("#c_device_infoGrid").html("Error while loading!!!");
+            $("#c_device_infoGrid").html($("#Error", result.responseText).html());
                 }
             });
 
@@ -160,7 +160,7 @@
                 sourceUrl: '@Html.Raw(@Url.Action("_List", "c_controller", new { controllerclass = Model.id, controller_id = ViewBag.controller_id }))',
         requestType: 'get', // Ajax grid request type
         reloadFailed: function (result) {
-            $("#c_controllerGrid").html("Error while loading!!!");
+            $("#c_controllerGrid").html($("#Error", result.responseText).html());
                 }
             });
 
