--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -26,7 +26,7 @@
     <div class="card-body">
         @MyHtmlHelpers.EquiLink("http://gensvw1051:5601/app/kibana#/discover?_g=()", "fas fa-wrench", "Kibana (VIDS)", helperText: "Elastic search tool to search the VIDS database")
         @MyHtmlHelpers.EquiLink("http://andonscreendumps.gen.volvocars.net/", "fas fa-wrench", "Screen dumps (ANDON)", helperText: "All Andon screen dumps (non x20)")
-        @MyHtmlHelpers.EquiLink("http://gensvw1162/XManagerWeb/", "fas fa-wrench", "Screen dumps (ANDON) X2O", helperText: "All Andon screen dumps (x20) user:reader pwd:Reader1")
+        @MyHtmlHelpers.EquiLink("http://gensvw1162/XManagerWeb/", "fas fa-wrench", "Screen dumps (ANDON) X2O", helperText: "All Andon screen dumps (x20) user:reader password:Reader1")
     </div>
 </div>
 }
